--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^4.0.7",
     "shortest-job-next": "file:"
   },
   "devDependencies": {
