--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-google-charts": "^4.0.7",
+    "react-tooltip": "^5.28.0",
     "shortest-job-next": "file:"
   },
   "devDependencies": {
